[package]
name = "bitree"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "A no_std-compatible binary indexed tree (Fenwick tree) for efficient prefix sums."
repository = "https://github.com/vandenheuvel/bitree"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["fenwick", "binary-indexed-tree", "prefix-sum", "data-structure", "no-std"]
categories = ["data-structures", "algorithms", "no-std"]
exclude = ["target/", ".claude/"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
ntest = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
